AWS/AWS-Services/EKS/EKS-QWEN3/Test-App/service-lb.yaml
# service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb
  namespace: test-nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
