AWS/AWS-Services/EKS/EKS-QWEN3/Test-App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test-nginx
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
